# vex-core

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  RUNBOOK.md  docker-compose.yml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: cmd.rs  core_arithmetic.rs  events.rs  l2_market_data.rs  lib.rs  logging.rs  market_specification.rs  order.rs  snowflake.rs  user_profile.rs
common/src/api/: mod.rs
common/src/cmd/: mod.rs
common/src/model/: core_arithmetic.rs  enums.rs  l2_market_data.rs  market_specification.rs  mod.rs  order.rs  symbol_position_record.rs  symbol_specification.rs  user_profile.rs
docker/: DOCKER_README.md  docker-compose.media-driver.yml  docker-compose.yml  docker-scripts.sh
docker/media-driver/: Dockerfile
docker/sbe/: Dockerfile
docker/sbe/resources/: ordercmd.xml
media-driver/: Dockerfile
networking/: Cargo.toml
networking/src/: client.rs  client_v1.rs  lib.rs  publisher.rs  server_v1.rs  subscriber.rs  utils.rs
networking/src/client/: client.rs  cmd_handler.rs  config.rs  mod.rs
networking/src/server/: aeron.rs  cmd_handler.rs  config.rs  duologue.rs  gateway_handler.rs  gateway_manager.rs  gateway_publications.rs  handler.rs  mod.rs  replay.rs  server.rs  utils.rs
networking/tests/: client_server_tests.rs  integration_tests.rs  publisher_tests.rs  subscriber_tests.rs
order/src/: lib.rs  message_header_codec.rs  order_command_message_codec.rs  order_command_type.rs  order_type.rs  side.rs  status.rs  time_in_force.rs
orderbook/: Cargo.toml
orderbook/src/: direct_impl.rs  events.rs  lib.rs  naive_impl.rs  tree.rs  unit_tests.rs
orderbook/tests/: bucket.rs  fees.rs  orderbook.rs  serialization.rs  symbol_specification.rs
processors/: Cargo.toml  build.rs
processors/src/: error.rs  events.rs  journaling.rs  lib.rs  matching_engine.rs  risk_engine.rs
processors/src/protos/: trading.proto
resources/: ordercmd.xml
sbe-order/: Cargo.toml
sbe-order/src/: lib.rs  order_command_message_codec.rs  order_type.rs
scripts/: setup_hooks.sh
server/: Cargo.toml
server/src/: engine.rs  events.rs  lib.rs  utils.rs
server/tests/: integration_test.rs
src/: api.rs  engine.rs  events.rs  main.rs
src/processors/: matching_engine.rs  mod.rs  risk_engine.rs
utils/: Cargo.toml
utils/src/: handler_util.rs  lib.rs
vex-config/: Cargo.toml
vex-config/examples/: basic.rs  custom.rs  symbol_config.rs  symbols.toml
vex-config/src/: balance_preload.rs  environment.rs  error.rs  lib.rs  loader.rs  logging.rs  networking.rs  symbols.rs
vex-config/tests/: integration_tests.rs
xtask/: Cargo.toml  README.md  TEST_SUITE_README.md
xtask/src/: lib.rs  main.rs
xtask/src/builders/: mod.rs  order_builder.rs
xtask/src/fixtures/: mod.rs
xtask/src/scenarios/: balance.rs  cancellation.rs  comprehensive.rs  fok.rs  gtc.rs  ioc.rs  mod.rs
xtask/src/test_framework/: client.rs  mod.rs  redis.rs  types.rs
xtask/src/verifiers/: balance_verifier.rs  invariants.rs  mod.rs  orderbook_verifier.rs  response.rs  trade_verifier.rs
xtask/tests/: cache-deps.sh  client.Dockerfile  docker-compose.yml  media-driver.Dockerfile  server.Dockerfile  start-client.sh  start-server.sh
xtask/tests/.docker-cache-layer/: Cargo.toml
xtask/tests/test-results/: received_ids.txt
