[package]
name = "vex-core"
version = "0.1.0"
edition = "2021"

[features]
balance-preload = ["vex-config/balance-preload", "vex-server/balance-preload"]

[workspace]
resolver = "2"
members = [
    "common", 
    "vex-config",
    "networking",
    "processors",
    "order",
    "xtask",
    "orderbook" ,
    "server", 
]

[dependencies]
vex-server = { workspace = true }
vex-config = { workspace = true }
ctrlc = { workspace = true }
tracing-subscriber = { workspace =  true}
tracing = { workspace = true}
tikv-jemallocator = { workspace = true }

[workspace.dependencies]
common = { path = "./common"}
vex-config = { path = "./vex-config" }
vex-server = { path = "./server" }
sbe_order = { path = "./order" }
vex-networking = { path = "./networking" }
vex-orderbook = { path = "./orderbook" }
processors = { path = "./processors" }
borsh = { version = "1.5.7", default-features = false, features = ["hashbrown", "derive", "de_strict_order"] }
tokio = { version = "1", features = ["full"] }
hashbrown = { version = "0.15.4", features = ["serde"]}
thiserror = "2.0.12"
rusteron-client = "0.1.143"
rusteron-media-driver = "0.1.143"
rusteron-archive = "0.1.143"
disruptor = {git="https://github.com/esciiee/disruptor-rs.git" , rev="39e2f1d"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.1"
ctrlc = "3.4"
parking_lot = "0.12"
tikv-jemallocator = "0.5"

[profile.release]
# Link Time Optimization - enables cross-crate inlining and optimization
# "fat" performs LTO across the entire dependency graph for maximum performance
lto = "fat"

# Use single codegen unit to maximize optimization opportunities
# Trades longer compile time for better runtime performance and smaller binaries
codegen-units = 1

# Maximum optimization level - enables all LLVM optimizations
# Includes aggressive inlining, loop unrolling, and vectorization
opt-level = 3

# Remove debug symbols from the final binary
# Significantly reduces binary size for production deployments
strip = true

# Disable debug information generation
# Works in conjunction with strip=true to ensure no debug overhead
debug = false

# Apply maximum optimization to all dependencies
[profile.release.package."*"]
opt-level = 3
