[package]
name = "vex-networking"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
rusteron-media-driver = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
vex-config = { workspace = true }
disruptor = { workspace = true }
rusteron-archive = { workspace = true, features = ["extra-logging"] }
rand = "0.8"
arc-swap = "1.7.1"

[dev-dependencies]
test-log = { version = "0.2.15", features = ["trace"] }
