[package]
name = "processors"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
vex-orderbook = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
rdkafka = { version = "0.36", features = ["tokio"] }
