[package]
name = "processors"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
vex-orderbook = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

rdkafka = { version = "0.36", features = ["tokio"] }
vex-networking = { workspace = true }
rusteron-archive = { workspace = true }
parking_lot = "0.12.5"

[dev-dependencies]
tokio = "1.48.0"

