[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace crates containing our data models and order book logic
common = { workspace = true }
orderbook = { workspace = true }
processors = { workspace = true }
vex-config = { workspace = true }
vex-networking = { workspace = true }
utils = { workspace = true }
parking_lot = {workspace = true}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
hashbrown.workspace = true
disruptor = "3.4.0"
ctrlc = "3.4"
tikv-jemallocator = { workspace = true }

