[package]
name = "vex-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace crates containing our data models and order book logic
common = { workspace = true }
vex-orderbook = { workspace = true }
processors = { workspace = true }
vex-config = { workspace = true }
vex-networking = { workspace = true }
parking_lot = {workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hashbrown = { workspace = true }
disruptor = { workspace = true }
ctrlc = "3.4"
tikv-jemallocator = { workspace = true }

[dev-dependencies]
rusteron-client = { workspace = true }
tokio = { workspace = true }

