[package]
name = "vex-config"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
config = "0.14"
thiserror.workspace = true
tracing.workspace = true
common = { workspace = true }

[dev-dependencies]
tempfile = "3.12"
tracing-subscriber = "0.3"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "custom"
path = "examples/custom.rs"