[package]
name = "vex-config"
version = "0.1.0"
edition = "2024"

[features]
balance-preload = []

[dependencies]
serde_yaml = "0.9"
toml = "0.8"
config = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hashbrown = { workspace = true }
common = { workspace = true }

[dev-dependencies]
tempfile = "3.12"
tracing-subscriber = "0.3"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "custom"
path = "examples/custom.rs"

[[example]]
name = "symbol_config"
path = "examples/symbol_config.rs"
