[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_client"
path = "src/bin/tests/test_client.rs"

[[bin]]
name = "test_server"
path = "src/bin/tests/test_server.rs"

[dependencies]
duct = "0.13" 
hdrhistogram = "7.5"
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
thiserror = { workspace = true }
common = { workspace = true }
vex-networking = { workspace = true }
vex-config = { workspace = true }
rusteron-client = { workspace = true }
tracing = { workspace = true }
disruptor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

